<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spree</string>
    <string name="action_settings">Settings</string>
    <string name="resetText">Reset Text</string>
    <string name="clearText">Clear Text</string>
    <string name="pasteText">Paste Text</string>
    <string name="sourcesText">Reading Material</string>
    <string name="ready">Ready!</string>
    <string name="start">Read!</string>
    <string name="pause">Pause</string>
    <string name="wpm">250 WPM</string>
    <string name="done">Done</string>
    <string name="pasteHint">Type or paste your text here.</string>
    <string name="addText">Add Text</string>
    <string name="title_activity_paste">Add Your Text</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">Help</string>
    <string name="about_how_to">This app was created to help you speed read more easily! To add content, either share from other apps, copy and paste, or add a supported .epub or .txt file. </string>
    <string name="author">Developed by Doron Zehavi, All Rights Reserved, 2014</string>
    <string name="welcome">Welcome to Spree! Add some text to being speed reading!</string>
    <string name="rewind">Rewind</string>
    <string name="wordCount">wordCount</string>
    <string name="reset">Reset</string>
    <string name="s_logo">S Logo</string>
    <string name="timeLeft">Time Left</string>
    <string name="addToSpree">Add to Spree</string>
    <string name="title_activity_sources">SourcesActivity</string>
    <string name="color_stripe">Color Stripe</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="overflow">Menu Overflow</string>
    <string name="addFile">Add File</string>
    <string name="changeChapter">Change Chapter</string>
    <string name="enableSpritzText">Red Letter Alignment</string>

</resources>