<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/clearText"
        android:orderInCategory="101"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom"
        android:title="@string/clearText"/>
    <item
        android:id="@+id/pasteText"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_paste"
        android:showAsAction="ifRoom"
        android:title="@string/pasteText"/>
    <item
        android:id="@+id/addFile"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/addFile" />
    
    <item android:id="@+id/changeChapter"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/changeChapter"
        android:visible="false"/>

</menu>