<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/addText"
        android:orderInCategory="99"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/addText"/>
    <item
        android:id="@+id/resetText"
        android:icon="@drawable/ic_action_replay"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/resetText"/>

    <item
        android:id="@+id/settings"
        android:orderInCategory="102"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/title_activity_settings"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/title_activity_about"/>

</menu>