<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/wpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/wpm"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/play_button"
        android:layout_alignLeft="@+id/play_button"
        android:max="99"
        android:progress="24" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:max="100" />

    <ProgressBar
        android:id="@+id/spritzProgressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:max="100" />

    <TextView
        android:id="@+id/readView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:maxLines="2"
        android:clickable="true"
        android:text="@string/ready"
        android:textSize="28sp"
        android:typeface="serif" />


    <com.andrewgiang.textspritzer.lib.SpritzerTextView
        android:id="@+id/spritzView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="Ready"
        android:textSize="28sp"
        android:typeface="monospace"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/rewind_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/progressbar"
        android:layout_below="@+id/progressbar"
        android:background="@android:color/transparent"
        android:contentDescription="@string/rewind"
        android:paddingTop="5dp"
        android:src="@drawable/ic_action_rewind" />

    <TextView
        android:id="@+id/wordCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressbar"
        android:layout_centerHorizontal="true"
        android:paddingTop="8dp"
        android:text="@string/wordCount"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/timeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/progressbar"
        android:layout_below="@+id/progressbar"
        android:paddingTop="8dp"
        android:text="@string/timeLeft"
        android:textColor="@color/black"
        android:textSize="18sp" />

</RelativeLayout>